force-app/main/default/objects/RFMMetrics__c/RFMMetrics__c.object-meta.xml
<CustomObject>
    <label>RFMMetric</label>
    <nameField>
        <label>RFMMetrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFMMetrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>