force-app/main/default/objects/RFMMetrics__c/fields/Frequency_Score__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Score__c</fullName>
    <label>Frequency_Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>