force-app/main/default/objects/RFMMetrics__c/fields/Monetary_Score__c.field-meta.xml
<CustomField>
    <fullName>Monetary_Score__c</fullName>
    <label>Monetary_Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>