force-app/main/default/objects/RFMMetrics__c/fields/Recency_Score__c.field-meta.xml
<CustomField>
    <fullName>Recency_Score__c</fullName>
    <label>Recency_Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>