force-app/main/default/objects/RFMMetrics__c/fields/RFM_Category__c.field-meta.xml
<CustomField>
    <fullName>RFM_Category__c</fullName>
    <label>RFM_Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>