force-app/main/default/objects/RFMMetrics__c/fields/RFM_Combined_Score__c.field-meta.xml
<CustomField>
    <fullName>RFM_Combined_Score__c</fullName>
    <label>RFM_Combined_Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>