force-app/main/default/objects/RFMMetrics__c/fields/RFM_Key__c.field-meta.xml
<CustomField>
    <fullName>RFM_Key__c</fullName>
    <label>RFM_Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>