force-app/main/default/objects/RFMMetrics__c/fields/Unified_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Unified_Customer_Id__c</fullName>
    <label>Unified_Customer_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>